--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "@types/animejs": "^3.1.2"
+    "@types/animejs": "^3.1.2",
+    "@types/react-redux": "^7.1.15"
   }
 }
